--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile 'mysql:mysql-connector-java:5.1.36'
     compile 'javax.servlet:servlet-api:2.5'
     compile 'com.alibaba:druid:1.0.16'
+    compile 'org.slf4j:slf4j-api:1.7.18'
+    compile 'org.springframework.boot:spring-boot:1.3.3.RELEASE'
+    compile 'org.springframework.boot:spring-boot-starter-web:1.3.3.RELEASE'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     runtime('jstl:jstl:1.2')
